--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 body { 
   background-color: var(--cor-de-fundo);
 }
-h1 {
-  background-color: white;
+:root {
+  --cor-de-funo: #EBECEE;
+  --branco: #FFFFFF;
 }
