--- a/styles/header.css
+++ b/styles/header.css
@@ -2,5 +2,11 @@
   width: 24px
   height: 24px
   background-image: url("../img/Menu.svg");
+  background-repeat: no-repeat
+  background-position: center;
   display: inline-block;
+}
+
+.container_botao:checked~.container_rotulo>.cabeçalho_menu-hamburguer {
+  background-image:url("../img/MenuAberto.svg");
 }
