--- a/styles/contato.css
+++ b/styles/contato.css
@@ -8,3 +8,5 @@
   background: var(--azul-degrade);
   -webkit-background-clip: text
   -webkit-text-fill-color: transparent
+  background-clip: text;
+}
