--- a/styles/header.css
+++ b/styles/header.css
@@ -1,4 +1,4 @@
-.cabeçalho_menu-hamburguer {
+.cabeçalho__menu-hamburguer {
   width: 24px
   height: 24px
   background-image: url("../img/Menu.svg");
@@ -7,11 +7,11 @@
   display: inline-block;
 }
 
-.container_botao:checked~.container_rotulo>.cabeçalho_menu-hamburguer {
+.container__botao:checked~.container__rotulo>.cabeçalho__menu-hamburguer {
   background-image: url("../img/MenuAberto.svg");
 }
 
-.container_botao:checked~.container_rotulo {
+.container__botao:checked~.container__rotulo {
   background: var(--azul-degrade);
 }
 
@@ -28,6 +28,6 @@
   align-items: center;
 }
 
-.container_imagem {
+.container__imagem {
   padding: 1em;
 }
