--- a/styles/banner.css
+++ b/styles/banner.css
@@ -9,3 +9,17 @@
   font-size 18px;
   font-weight: 700;
 }
+
+.banner__texto {
+  font-weight: 500;
+  margin: 1em 0;
+}
+
+.banner__pesquisa {
+  background-color: transparent;
+  bonder: 1px solid var(--branco);
+  color: var(--branco);
+  bonder-radius: 24px;
+  padding: 1em;
+  with: 100%;
+}
