--- a/styles/header.css
+++ b/styles/header.css
@@ -31,3 +31,14 @@
 .container__imagem {
   padding: 1em;
 }
+
+.lista-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  width: 60vw;
+}
+
+.container__botao:checked~.lista-menu {
+  display: block;
+}
