--- a/styles/contato.css
+++ b/styles/contato.css
@@ -10,3 +10,8 @@
   -webkit-text-fill-color: transparent
   background-clip: text;
 }
+
+.contato__titulo {
+  font-size: 18px;
+  font-weight: 500;
+}
