--- a/styles/header.css
+++ b/styles/header.css
@@ -42,3 +42,14 @@
 .container__botao:checked~.lista-menu {
   display: block;
 }
+
+.lista-menu__titulo,
+.lista-menu__item {
+  padding: 1em;
+  background-color:var(--branco);
+}
+
+.lista-menu__titulo {
+  color: var(--laranja);
+  font-weight: 700;
+}
