--- a/styles/contato.css
+++ b/styles/contato.css
@@ -6,8 +6,8 @@
 .contato__titulo,
 .contato_texto {
   background: var(--azul-degrade);
-  -webkit-background-clip: text
-  -webkit-text-fill-color: transparent
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   background-clip: text;
 }
 
