--- a/styles/header.css
+++ b/styles/header.css
@@ -2,7 +2,7 @@
   width: 24px
   height: 24px
   background-image: url("../img/Menu.svg");
-  background-repeat: no-repeat
+  background-repeat: no-repeat;
   background-position: center;
   display: inline-block;
 }
