--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,6 @@
 .cabeçalho__menu-hamburguer {
-  width: 24px
-  height: 24px
+  width: 24px;
+  height: 24px;
   background-image: url("../img/Menu.svg");
   background-repeat: no-repeat;
   background-position: center;
