--- a/styles/rodapé.css
+++ b/styles/rodapé.css
@@ -18,11 +18,22 @@ hr {
   }
 
 .lista-rodapé {
-  displau: block;
+  display: block;
 }
 
 .lista-rodapé__item {
   display: flex;
   align-items: center;
   margin: 0.6em 0;
+}
+
+.lista-rodapé__link {
+  color: var(--cinza);
+  text-decoration: none;
+  margin-left: 0.6em;
+}
+
+.lista-rodapé__titulo {
+  font-size: 14px;
+  color: var(--cinza-claro);
 }
