--- a/styles/banner.css
+++ b/styles/banner.css
@@ -23,3 +23,41 @@
   padding: 1em;
   width: 100%;
 }
+
+.banner__pesquisa::placeholder {
+  font-family: var(--fonte-principal);
+  font-size: 14px;
+  font-weight: 300;
+  test-align: center;
+  color: var(--branco);
+  background: url("../img/Lupa.svg") no-repeat;
+  background-position: 1em;
+}
+
+@media screen and (min-width: 1024px) {
+    .banner__titulo {
+         font-size: 30px;
+    }
+
+    .banner__pesquisa {
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 7em;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .banner__pesquia {
+      width: 35%;
+    }
+
+    .banner__pesquisa::placeholder {
+       background-position: 12em;
+    }
+
+    .banner {
+        padding: 0em 0;
+    }
+}
