--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -16,3 +16,14 @@
 .swiper-button-next {
   display: none;
 }
+
+.swiper-pagination {
+  position: initial;
+  margin: .5em 0;
+}
+
+.card__descrição {
+  display: flex;
+  justify-content: space-between;
+  margin-button: 0.5em;
+}
