--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -27,3 +27,8 @@
   justify-content: space-between;
   margin-button: 0.5em;
 }
+
+.card__botões {
+  display: flex;
+  jutify-content: space-between;
+}
