--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -32,3 +32,16 @@
   display: flex;
   jutify-content: space-between;
 }
+
+.botões {
+  display: flex;
+}
+
+.card {
+  background: var(--branco);
+  box-shadow: 8ox 4ox 4o rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  margin: 1em;
+  pading: 1em;
+}
+  
