--- a/styles/header.css
+++ b/styles/header.css
@@ -53,3 +53,102 @@
   color: var(--laranja);
   font-weight: 700;
 }
+
+.lista-menu__link {
+  background: var(--azul-degrade);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-tranform: uppercase;
+}
+
+.container__botao {
+  display: none;
+}
+
+.container__titulo {
+  display: none;
+}
+
+.opções {
+  display: none;
+}
+
+.container__texto {
+  display: none;
+}
+
+@media screen and (min-width: 1024px) {
+
+  .container__titulo,
+  .container__titulo--negrito {
+    font-family: var(--fonte-secundario);
+    font-size: 30px;
+  }
+
+  .container__titulo {
+    font-weight: 400;
+    display: block;
+  }
+
+  .container__titulo-negrito {
+    font-weight: 700;
+  }
+
+  .opções {
+    display: flex;
+  }
+
+  .opções__item {
+    padding: 0 1em;
+    text-transform: uppercase;
+  }
+
+  .opções__link {
+    text-decoration: none;
+    color: var(--preto);
+  }
+
+  .container__imagem-transparente {
+    display: none;
+  }
+
+  .cabeçalho__menu-hamburguer {
+    display: none;
+  }
+
+  .opções__botão: checked~.lista-menu {
+    display: block;
+    width: auto;
+  }
+
+  .opções__botão {
+    display: none;
+  }
+
+  .opções__botão: checked~.opções__rotulo>.opções__item {
+    background: var(--azul-degrade);
+    color: var(--branco);
+  }
+
+  .opções__item {
+    padding: 2em 1em;
+  }
+
+  .lista-menu__itemn: hover {
+    background: var(--azul-degrade);
+  }
+
+  .lista-menu__item: hover>.lista-menu__link {
+    -webkit-tet-fill-color: var(--branco);
+    text-decoration: none;
+  }
+
+}
+
+@media screen and (min-width: 1728px) {
+  container__link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: var(--preto);
