--- a/styles/header.css
+++ b/styles/header.css
@@ -152,3 +152,17 @@
     align-items: center;
     text-decoration: none;
     color: var(--preto);
+}
+
+.cabeçalho {
+  padding: 0 2em;
+}
+
+.opções {
+  margin-right: auto;
+}
+
+.container__texto {
+  display: black;
+}
+}
