--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,26 @@
+@import url("styles/header.cs")
+@import url("styles/banner.cs")
+@import url("styles/carrossel.cs")
+@import url("styles/topicos.cs")
+@import url("styles/contato.cs")
+@import url("styles/rodapé.cs")
+
 :root {
   --cor-de-fundo: #EBECEE;
-}
-body { 
-  background-color: var(--cor-de-fundo);
-}
-:root {
-  --cor-de-funo: #EBECEE;
   --branco: #FFFFFF;
+  --laranja: #E89B66;
+  --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+  --fonte-principal: "Poppins";
+  --azul: #002F52;
+  --fonte-secundario: "Josefin Sams";
+  --preto: #000000;
+  --cinza: #474646;
+  --cinza-claro: #858585;
+}
+
+body {
+  background-color: var(--cor-de-fundo);
+  font-family: var(--fonte-principal);
+  font-size: 10px;
+  font-weight: 400;
 }
